syntax = "proto3";

option java_multiple_files = true;

package mcloudapps.planner.grpc;

service WeatherService {
    rpc GetWeather(WeatherRequest) returns (WeatherResponse);
}

message WeatherRequest {
    string city = 1;
}

message WeatherResponse {
    string city = 1;
    string weather = 2;
}
